# Kalebs-College-Work

./: .gitignore  .gitmodules  README.md  preamble.tex  starship.toml  template.tex
CS/CS F202/Homework/: preamble.tex
CS/CS321/: countline.sh  pa2.c  pa2_part2.c
CS/CS321/Homework/: countline.sh  errors.txt  hw01.typ
CS/CS321/Homework/lab-2-process-signal-handling/: Cargo.toml  part1.c  part1.txt
CS/CS321/Homework/lab-2-process-signal-handling/src/: main.rs
CS/CS321/Notes/: day01.typ  day02.typ  day03.typ  day05.typ
CS/CS331/: check_haskell.hs  check_scheme.scm  convert_tests.lua  hw1.typ  lexit.lua  lexit_test.lua  lua_test.lua  pa2.lua  pa2_test.lua  parseit.lua  parseit_test.lua
CS/CS331/Homework/: check_haskell.hi  check_haskell.hs  hw01.typ  lexit.lua  lexit_test.lua  pa2.lua  pa2_test.lua  parseit.lua  parseit_test.lua  use_lexit.lua
CS/CS331/Notes/: day02.typ  day03.typ  day04.typ  day05.typ  day07.typ  day09.typ
CS/CS331/tamandua-rs/: Cargo.toml  lexit_test.lua  tests_to_rs.py
CS/CS331/undefined-rs/: Cargo.toml
CS/CS371/: HW1.bib  HW1.typ  template.typ
CS/CS372/Notes/: day02.typ
CS/CS_F311/HW01-Rust/: Cargo.toml
Math/MATH-F252X-Calculus-II/: test.tex
Math/MATH-F252X-Calculus-II/Homework/: finalreview.pgf-plot.gnuplot  finalreview.tex  finalreview.tkzparfct.gnuplot  midterm3review.tex  midterm3review.tkzparfct.gnuplot  midtermIreview.tex  practice2.tex  preamble.tex  set1.tex  set10.tex  set11.tex  set2.tex  set3.tex  set4.tex  set5.tex  set6.tex  set7.tex  (+3 more)
Math/MATH307-Discrete-Mathematics/: assmt1.typ  assmt2.typ  assmt3.typ
(+177 files in other folders)
