[package]
name = "lab-2-process-signal-handling"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2.169", default-features = false }

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 'z'
codegen-units = 1
strip = true
